altera scripts para deploy

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon",
-    "dev": "tsx watch src/server.ts",
-    "build": "tsup src"
+    "dev": "tsx src/server.ts",
+    "dev:local": "tsx watch src/server.ts",
+    "build:": "tsup src",
+    "vercel-buildss": "npx prisma generate && npx migrate deploy"
   },
   "type": "module",
   "keywords": [],
@@ -15,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "pg": "^8.12.0",
     "prisma": "^5.17.0",
