--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "tsx src/server.ts",
     "dev:local": "tsx watch src/server.ts",
     "build:": "tsup src",
-    "vercel-buildss": "npx prisma generate && npx migrate deploy"
+    "vercel-build": "npx prisma generate && npx migrate deploy"
   },
   "type": "module",
   "keywords": [],
