--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 node_modules
 # Keep environment variables out of version control
 .env
+
+dist/
+build/
+out/
+
+.vscode/
+.idea/
+.log
+.tmp
+.swp
