--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "nodemon": "nodemon",
+    "start": "node dist/server.js",
     "dev": "tsx watch src/server.ts",
-    "build": "tsup src --format cjs --out-dir dist",
+    "build": "tsc",
     "vercel-build": "npx prisma generate && npx prisma migrate deploy"
   },
   "type": "module",
@@ -24,6 +25,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
